PyMaker/datas/object2/RawHTML/i18001/Python_DOC_referPages.hello-world-not-playing-with-mpi4pi-on-cluster.txt
<div class="post-text" itemprop="text">
<p>I am trying to learn mpi4pi on the local cluster. I hence wrote a hello_world program, and it JUST WONT RUN! I have attached the .py code, and the .eer. Could someone point out what I am doing wrong? Thanks in advance.</p>
<p>hello world:</p>
<pre><code>from mpi4py import MPI
#import numpy as np
comm=MPI.COMM_WORLD
print "Hello, World! My rank is: " + str(comm.rank)
</code></pre>
<p>the error:</p>
<pre><code>  File "MPI_Hello_World.py", line 4
print "Hello, World! My rank is: " + str(comm.rank)

                                 ^
  SyntaxError: invalid syntax
</code></pre>
<p>File "MPI_Hello_World.py", line 4
    print "Hello, World! My rank is: " + str(comm.rank)
                                     ^
      SyntaxError: invalid syntax
  File "MPI_Hello_World.py", line 4
    print "Hello, World! My rank is: " + str(comm.rank)
                                     ^</p>
<pre><code>  SyntaxError: invalid syntax
</code></pre>
<p>File "MPI_Hello_World.py", line 4
    print "Hello, World! My rank is: " + str(comm.rank)
                                     ^</p>
<pre><code>  SyntaxError: invalid syntax
</code></pre>
<p>File "MPI_Hello_World.py", line 4
    print "Hello, World! My rank is: " + str(comm.rank)
                                     ^</p>
<pre><code>  SyntaxError: invalid syntax
</code></pre>
<p>File "MPI_Hello_World.py", line 4
    print "Hello, World! My rank is: " + str(comm.rank)
                                     ^</p>
<pre><code>  SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>It seems like you're using Python 3.x.</p>
<p><a href="http://docs.python.org/3/library/functions.html#print" rel="nofollow"><code>print</code></a> is a function in Python 3.x.</p>
<pre><code>&gt;&gt;&gt; print "Hello, World! My rank is: " + str(1)
  File "&lt;stdin&gt;", line 1
    print "Hello, World! My rank is: " + str(1)
                                     ^
SyntaxError: invalid syntax
&gt;&gt;&gt; print("Hello, World! My rank is: " + str(1))
Hello, World! My rank is: 1
</code></pre>
</div>
<span class="comment-copy">It now generates the following error, after I fixed the function issue.   Traceback (most recent call last):   File "./MPI_Hello_World.py", line 1, in &lt;module&gt;     from mpi4py import MPI ImportError: libmpich.so.3: cannot open shared object file: No such file or directory</span>
<span class="comment-copy">@Sai, How about post another question with the exact traceback?</span>
<span class="comment-copy"><a href="http://stackoverflow.com/questions/20098651/hello-world-not-playing-with-mpi4pi-on-clusterii">here it is</a></span>
